Adopt to Java 17